--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <!--  added to allow app to connect to internet  -->
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".MyNotificationChannel"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
